Fixed Merging Issues
Corrected brackets errors and did a CSS fix after logout the login page was off centered

--- a/projectconnect/src/app/styles/login.page.css
+++ b/projectconnect/src/app/styles/login.page.css
@@ -1,49 +1,47 @@
 .loginContainer{
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
+    display: flex !important;
+    justify-content: center !important;
+    height: 100vh !important;
+    align-items: center !important;
+    flex-direction: column !important;
+    gap: 20px !important;
 }
 
 input{
-    /* height: 6vh; */
-    min-height: 30px;
-    width: 40vw;
-    background-color: #2D2D2D;
-    color: white;
-    border: none;
-    padding-left: 15px;
-    border-radius: 6px;
-    font-size: 2.5rem;
+    min-height: 30px !important;
+    width: 40vw !important;
+    background-color: #2D2D2D !important;
+    color: white !important;
+    border: none !important;
+    padding-left: 15px !important;
+    border-radius: 6px !important;
+    font-size: 2.5rem !important;
 }
 
 #title{
-    background-color: #2D2D2D;
-    color: white;
-    border-radius: 6px;
-    font-size: 4rem;
-    padding: 0px 20px 0px 20px;
-    /* margin-bottom: 4vw; */
+    background-color: #2D2D2D !important;
+    color: white !important;
+    border-radius: 6px !important;
+    font-size: 4rem !important;
+    padding: 0px 20px 0px 20px !important;
 }
 
 .buttonContainer{
-    display: flex;
-    align-items: center;
-    gap: 15px;
+    display: flex !important;
+    align-items: center !important;
+    gap: 15px !important; 
 }
 
 .registerButtons,
 .registerButtons:active,
 .registerButtons:focus {
-    background-color: #2D2D2D ;
-    color: white ;
-    border: none; /* Remove border */
-    outline: none; /* Remove outline on focus */
-    padding-left: 30px;
-    padding-right: 30px;
-    font-size: 2.5rem;
+    background-color: #2D2D2D !important;
+    color: white !important;
+    border: none !important; /* Remove border */
+    outline: none !important; /* Remove outline on focus */
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+    font-size: 2.5rem !important;
 }
 
 .registerButtons:hover{
@@ -56,14 +54,13 @@ a:hover {
     color: inherit;    
     text-decoration: none;  
 }
-
 .errorNotification {
-    color: red;
-    background-color: #ffe6e6;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid red;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 14px;
-  }
+    color: red !important;
+    background-color: #ffe6e6 !important;
+    padding: 10px !important;
+    margin-bottom: 15px !important;
+    border: 1px solid red !important;
+    border-radius: 5px !important;
+    text-align: center !important;
+    font-size: 14px !important;
+}
